candidate/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate
  labels:
    app: candidate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidate
  template:
    metadata:
      labels:
        app: candidate
    spec:
      containers:
        - name: candidate
          image: username/candidate:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
