candidate/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidate
  labels:
    app: candidate
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: candidate
